# Scratch

./: .gitignore  CMakeLists.txt  README.md  project_code.txt
src/: main.cpp
src/backend/: block_executor_looks.cpp  block_executor_looks.h  block_executor_sensing.cpp  block_executor_sensing.h  block_executor_sound.cpp  block_executor_sound.h  custom_blocks.cpp  custom_blocks.h  file_io.cpp  file_io.h  logger.cpp  logger.h  logic.cpp  logic.h  memory.cpp  memory.h  operators.cpp  operators.h  runtime.cpp  runtime.h  sensing.cpp  sensing.h  sound.cpp  sound.h
src/common/: definitions.h  globals.h
src/frontend/: background_menu.cpp  background_menu.h  block_highlight.cpp  block_highlight.h  block_utils.cpp  block_utils.h  character_panel.cpp  character_panel.h  confirm_dialog.cpp  confirm_dialog.h  costume_editor.cpp  costume_editor.h  draw.cpp  draw.h  hover.cpp  hover.h  input.cpp  input.h  logger.cpp  logger.h  menu.cpp  menu.h  paint.h  palette.cpp  palette.h  pen.cpp  pen.h  sound_manager.cpp  sound_manager.h  sound_manager_integration.h  sprite_panel.cpp  sprite_panel.h  text_input.cpp  text_input.h
src/gfx/: SDL2_gfxPrimitives.h
src/utils/: logger.cpp  logger.h  system_logger.cpp  system_logger.h
